# cpp-sdk

./: README.md
cpp-client/: .gitignore  CMakeLists.txt  main.cpp
cpp-client/cpp/include/: ta_analytics_sdk.h  ta_cJSON.h  ta_calibrated_time.h  ta_cpp_helper.h  ta_cpp_network.h  ta_cpp_send.h  ta_cpp_utils.h  ta_encrypt.h  ta_error_msg.h  ta_event_task.h  ta_flush_task.h  ta_json_object.h  ta_sqlite.h  ta_timer.h
cpp-client/cpp/src/: ta_analytics_sdk.cpp  ta_cJSON.c  ta_calibrated_time.cpp  ta_cpp_helper.cpp  ta_cpp_network.cpp  ta_cpp_send.cpp  ta_cpp_utils.cpp  ta_encrypt.cpp  ta_event_task.cpp  ta_flush_task.cpp  ta_json_object.cpp  ta_mac_tool.mm  ta_sqlite.cpp  ta_timer.cpp
cpp/cpp/include/: ta_analytics_sdk.h  ta_cpp_network.h
cpp/cpp/src/: ta_cpp_utils.cpp  ta_mac_tool.mm
cpp/include/: ta_analytics_sdk.h  ta_cpp_helper.h
cpp/src/: ta_analytics_sdk.cpp  ta_cpp_helper.cpp  ta_cpp_network.cpp
demo/MacosApp/MacosApp/: AppDelegate.h  AppDelegate.mm  ViewController.h  ViewController.m  main.m
demo/MacosApp/MacosApp.xcodeproj/project.xcworkspace/xcuserdata/wwango.xcuserdatad/: UserInterfaceState.xcuserstate
demo/MacosApp/MacosApp.xcodeproj/xcuserdata/wwango.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
demo/MacosApp/MacosApp.xcodeproj/xcuserdata/wwango.xcuserdatad/xcschemes/: xcschememanagement.plist
demo/MacosApp/MacosApp/Base.lproj/: Main.storyboard
